Make sure items dont overflow outside inline

--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -142,6 +142,8 @@
     width: 40rem;
 
     min-height: 28rem;
+
+    overflow-x: hidden;
     // height: 26rem;
 
 
